<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newProductNameTextLayout"
            style="@style/EdiTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/product_name_hint_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/productCategoryTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EdiTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/newProductNameTextLayout">
           <Spinner
            android:id="@+id/autoCompleteCategory"
            android:layout_width="match_parent"
               android:paddingLeft="8dp"
               android:layout_marginTop="3dp"
               android:paddingRight="8dp"
               android:background="@drawable/outline_background"
            android:layout_height="50dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/purchaseDateTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EdiTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/productCategoryTextLayout"
            android:hint="@string/product_purchase_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/purchaseDate"
                style="@style/DatePickerStyle"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiryDateTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EdiTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/purchaseDateTextLayout"
            android:hint="@string/product_name_expiry_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expiryDate"
                style="@style/DatePickerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/purchasedByTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EdiTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/expiryDateTextLayout"
            android:hint="@string/product_person_title">
            <Spinner
                android:id="@+id/purchasedBy"
                android:layout_width="match_parent"
                android:paddingLeft="8dp"
                android:layout_marginTop="3dp"
                android:paddingRight="8dp"
                android:background="@drawable/outline_background"
                android:layout_height="50dp" />

            <!--
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/purchasedBy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
            -->
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/purchasedQtyTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EdiTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/purchasedByTextLayout"
            android:hint="@string/product_quantity_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/purchasedQty"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addPurchaseProductBtn"
        android:layout_width="match_parent"
        style="@style/ButtonStyle"
        android:text="@string/add_product_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>